<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@android:color/black"
            app:tabIndicatorColor="@color/design_default_color_primary_dark"
            app:tabIndicatorHeight="4dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:weightSum="1"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_weight="0.2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/active_cases_lbl"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/active_cases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/darker_gray"
                        android:textAlignment="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/deaths_lbl"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/deaths_cases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/darker_gray"
                        android:textAlignment="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_weight="0.2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/active_cases_per_100k_lbl"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/active_100k"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/darker_gray"
                        android:textAlignment="center" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/deaths_per_100k_lbl"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/deaths_100k"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/darker_gray"
                        android:textAlignment="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/udpateDt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:text="@string/deaths_per_100k_lbl"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>